corpus/c/type/case-12/snapshots/gcc15/dual_sink_structured/render.ci.txt
src/main.c:7:17: error: [type_mismatch] incompatible types when initializing type 'int' using type 'struct Box'
raw : incompatible types when initializing type 'int' using type 'struct Box'
| src/main.c:7:17
|     int value = box;
|                 ^